<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context="com.example.user.sayin.HomeActivity">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/part1"
                android:layout_marginTop="-150dp"
                android:gravity="center"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_image"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/white"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>
            <ScrollView
                android:id="@+id/part3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/part2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:gravity="center">
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="@dimen/md_keylines"
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_marginRight="@dimen/md_keylines"
                        android:elevation="5dp"
                        app:cardElevation="5dp"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/overall"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/overall"
                            android:textColor="@color/colorPrimary"
                            android:textSize="28sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="@dimen/md_keylines"
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_marginRight="@dimen/md_keylines"
                        android:elevation="5dp"
                        app:cardElevation="5dp"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/activity"
                            android:textSize="28sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="@dimen/md_keylines"
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_marginRight="@dimen/md_keylines"
                        android:elevation="5dp"
                        app:cardElevation="5dp"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/todo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/todo"
                            android:textSize="28sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="@dimen/md_keylines"
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_marginRight="@dimen/md_keylines"
                        android:elevation="5dp"
                        app:cardElevation="5dp"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/suggest"
                            android:textSize="28sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="@dimen/md_keylines"
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_marginRight="@dimen/md_keylines"
                        android:elevation="5dp"
                        app:cardElevation="5dp"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/expense_list"
                            android:textSize="28sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </FrameLayout>

</FrameLayout>
